# orca-python

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  makefile  pyproject.toml  pyrightconfig.json  start_server.py
.github/workflows/: build-release-package.yml  ci.yml
examples/simple/: start_server.py
examples/simpletrigger/: processor.py  pyproject.toml  pyrightconfig.json  window.py
examples/simpletrigger/.orca/: registry.json
examples/simpletrigger/.orca/orca_python/registry/: algorithms.pyi  metadata_fields.pyi  processors.pyi  window_types.pyi
examples/simpletrigger/simpletrigger/: __init__.py  processor.py  window.py
orca_client/: __init__.py  exceptions.py  main.py
orca_python/: __init__.py  envs.py  exceptions.py  main.py
orca_python/registry/: algorithms.py  metadata_fields.py  window_types.py
tests/: test_algorithms.py  test_data_getter.py  test_processor_address.py  test_windows.py
