[project]
name = "simpletrigger"
version = "0.1.0"
description = ""
authors = [
    {name = "Frederick Mannings",email = "fred.mannings@solvicode.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orca-python (>=0.10.0,<0.11.0)",
    "schedule (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
